--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                     <CalculatorIcon size={26} className="stroke-2" />
                                 </div>
                                 <div>
-                                    <h1 className="text-2xl font-black tracking-tighter text-slate-800 dark:text-white font-sans">餐饮投资计算器</h1>
+                                    <h1 className="text-2xl font-black tracking-tighter text-slate-800 dark:text-white font-sans">餐饮店投资计算器</h1>
                                     <div className="flex items-center gap-2 mt-1">
                                         <p className="text-xs text-slate-500 dark:text-slate-400 font-medium tracking-wide">欢迎使用本工具，祝你生意兴隆</p>
                                     </div>
