--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- 视口设置：禁止缩放，适配刘海屏 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>餐饮店投资计算工具</title>
+    <title>餐饮店投资计算器</title>
     
     <!-- 网站图标 (Favicon) - 使用计算器 SVG 图标，品牌色 Indigo -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%234F46E5' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='16' height='20' x='4' y='2' rx='2'/%3E%3Cline x1='8' x2='16' y1='6' y2='6'/%3E%3Cline x1='16' x2='16' y1='14' y2='18'/%3E%3Cpath d='M16 10h.01'/%3E%3Cpath d='M12 10h.01'/%3E%3Cpath d='M8 10h.01'/%3E%3Cpath d='M12 14h.01'/%3E%3Cpath d='M8 14h.01'/%3E%3Cpath d='M12 18h.01'/%3E%3Cpath d='M8 18h.01'/%3E%3C/svg%3E">
@@ -189,9 +189,9 @@
                                     <CalculatorIcon size={26} className="stroke-2 text-indigo-600 dark:text-indigo-400" />
                                 </div>
                                 <div>
-                                    <h1 className="text-2xl font-black tracking-tighter text-slate-800 dark:text-white font-sans">餐饮投资计算器</h1>
+                                    <h1 className="text-2xl font-black tracking-tighter text-slate-800 dark:text-white font-sans">餐饮店投资计算器</h1>
                                     <div className="flex items-center gap-2 mt-1">
-                                        <p className="text-xs text-slate-500 dark:text-slate-400 font-medium tracking-wide">财务模型 v2.0</p>
+                                        <p className="text-xs text-slate-500 dark:text-slate-400 font-medium tracking-wide">欢迎使用本工具，祝你生意兴隆</p>
                                     </div>
                                 </div>
                             </div>
@@ -213,9 +213,9 @@
                                     <InputField theme="orange" label="房租 (元/月)" value={newStore.rent} onChange={v => setNewStore({...newStore, rent: v})} required />
                                     <InputField theme="orange" label="支付方式 (月)" value={newStore.paymentTerms} onChange={v => setNewStore({...newStore, paymentTerms: v})} suffix="" required prefix="" />
                                     <InputField theme="orange" label="押金" value={newStore.deposit} onChange={v => setNewStore({...newStore, deposit: v})} />
-                                    <InputField theme="orange" label="转让费/中介" value={newStore.transferFee} onChange={v => setNewStore({...newStore, transferFee: v})} />
-                                    <InputField theme="orange" label="加盟/学习费" value={newStore.franchiseFee} onChange={v => setNewStore({...newStore, franchiseFee: v})} />
-                                    <InputField theme="orange" label="装修+广告" value={newStore.renovationAds} onChange={v => setNewStore({...newStore, renovationAds: v})} />
+                                    <InputField theme="orange" label="转让费/中介费" value={newStore.transferFee} onChange={v => setNewStore({...newStore, transferFee: v})} />
+                                    <InputField theme="orange" label="加盟费/学习费" value={newStore.franchiseFee} onChange={v => setNewStore({...newStore, franchiseFee: v})} />
+                                    <InputField theme="orange" label="装修费/广告费" value={newStore.renovationAds} onChange={v => setNewStore({...newStore, renovationAds: v})} />
                                     <InputField theme="orange" label="设备费" value={newStore.equipment} onChange={v => setNewStore({...newStore, equipment: v})} />
                                     <InputField theme="orange" label="首批物料" value={newStore.materials} onChange={v => setNewStore({...newStore, materials: v})} />
                                 </div>
@@ -230,12 +230,12 @@
                                 <div className="p-6 pb-2"><ModuleHeader icon={PieChartIcon} title="新开店：盈亏平衡" bgColor="bg-indigo-50" iconColor="text-indigo-500" /></div>
                                 <div className="px-6 pb-6 flex-1 space-y-1">
                                     <InputField theme="indigo" label="每月人工" value={newStore.monthlyLabor} onChange={v => setNewStore({...newStore, monthlyLabor: v})} required />
-                                    <InputField theme="indigo" label="水电杂费(月)" value={newStore.utilities} onChange={v => setNewStore({...newStore, utilities: v})} required />
+                                    <InputField theme="indigo" label="水/电/杂费 (月)" value={newStore.utilities} onChange={v => setNewStore({...newStore, utilities: v})} required />
                                     <InputField theme="indigo" label="预估毛利率" value={newStore.grossMargin} onChange={v => setNewStore({...newStore, grossMargin: v})} required prefix="%" suffix="" />
                                     <div className="mt-8 p-5 rounded-2xl bg-slate-50/80 dark:bg-white/5 border border-slate-100 dark:border-white/10 flex flex-col items-center text-center">
                                         <SparklesIcon size={20} className="text-indigo-400 mb-2" />
                                         <p className="text-xs text-slate-700 dark:text-slate-300 font-bold">盈亏平衡指标</p>
-                                        <p className="text-[10px] text-slate-400 dark:text-slate-500 mt-1 px-4 leading-relaxed">此数据帮助您了解店铺每天需要达到多少营业额才能不亏损。</p>
+                                        <p className="text-[10px] text-slate-400 dark:text-slate-500 mt-1 px-4 leading-relaxed">此指标可帮你了解每天要达到多少营业额才能保本</p>
                                     </div>
                                 </div>
                                 <div className="bg-slate-50 dark:bg-[#0F131F] border-t border-slate-100 dark:border-white/5 flex">
@@ -252,17 +252,17 @@
                                     <InputField theme="emerald" label="营业额 / 天" value={existingStore.dailyRevenue} onChange={v => setExistingStore({...existingStore, dailyRevenue: v})} required />
                                     <InputField theme="emerald" label="房租 / 天" value={existingStore.dailyRent} onChange={v => setExistingStore({...existingStore, dailyRent: v})} required />
                                     <InputField theme="emerald" label="人工 / 天" value={existingStore.dailyLabor} onChange={v => setExistingStore({...existingStore, dailyLabor: v})} required />
-                                    <InputField theme="emerald" label="水电杂费 / 天" value={existingStore.dailyUtilities} onChange={v => setExistingStore({...existingStore, dailyUtilities: v})} required />
+                                    <InputField theme="emerald" label="水/电/杂费 / 天" value={existingStore.dailyUtilities} onChange={v => setExistingStore({...existingStore, dailyUtilities: v})} required />
                                     <InputField theme="emerald" label="实际毛利率" value={existingStore.grossMargin} onChange={v => setExistingStore({...existingStore, grossMargin: v})} required prefix="%" suffix="" />
                                 </div>
                                 <div className="bg-slate-50 dark:bg-[#0F131F] border-t border-slate-100 dark:border-white/5 mt-auto">
                                     <div className="flex border-b border-slate-100 dark:border-white/5">
-                                        <ResultBox label="毛利 (天)" value={exGrossProfit} isNegativeRed={true} />
-                                        <ResultBox label="固定成本 (天)" value={exFixedCost} isLast={true} isNegativeRed={true} />
+                                        <ResultBox label="毛利 (每天)" value={exGrossProfit} isNegativeRed={true} />
+                                        <ResultBox label="固定成本 (每天)" value={exFixedCost} isLast={true} isNegativeRed={true} />
                                     </div>
                                     <div className="flex">
-                                        <ResultBox label="保本线 (营业额)" value={exBreakEven} isNegativeRed={true} subtext="固定成本 ÷ 毛利率" />
-                                        <ResultBox label="净利润 (天)" value={exNetProfit} isNegativeRed={true} subtext="毛利 - 固定成本" isLast={true} />
+                                        <ResultBox label="保本线 (每天)" value={exBreakEven} isNegativeRed={true} subtext="固定成本 ÷ 毛利率" />
+                                        <ResultBox label="净利润 (每天)" value={exNetProfit} isNegativeRed={true} subtext="毛利 - 固定成本" isLast={true} />
                                     </div>
                                 </div>
                             </div>
