--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
                             </div>
                             
                             <div className="hidden md:flex items-center gap-6 text-xs font-bold text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-800 py-3 px-6 rounded-full shadow-[0_8px_20px_rgba(0,0,0,0.02)] border border-white/60 dark:border-white/10">
-                                <span className="flex items-center gap-2"><span className="w-2 h-2 rounded-full bg-red-500 shadow-[0_0_6px_rgba(239,68,68,0.4)]"></span> 必填项</span>
+                                <span className="flex items-center gap-2"><span className="w-2 h-2 rounded-full bg-red-500 shadow-[0_0_6px_rgba(239,68,68,0.4)]"></span> 红点部分为必填项</span>
                                 <span className="w-px h-3 bg-slate-200 dark:bg-slate-700"></span>
-                                <span className="flex items-center gap-2"><span className="w-2 h-2 rounded-full bg-indigo-500 shadow-[0_0_6px_rgba(99,102,241,0.4)]"></span> 自动计算</span>
+                                <span className="flex items-center gap-2"><span className="w-2 h-2 rounded-full bg-indigo-500 shadow-[0_0_6px_rgba(99,102,241,0.4)]"></span> 输入会自动计算</span>
                             </div>
                         </div>
 
