--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         const HammerIcon = ({size=18, className=""}) => (<svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="m15 12-8.5 8.5c-.83.83-2.17.83-3 0 0 0 0 0 0 0a2.12 2.12 0 0 1 0-3L12 9"/><path d="M17.64 15 22 10.64"/><path d="m20.91 11.7-1.25-1.25c-.6-.6-.93-1.4-.93-2.25V7.86c0-.55-.45-1-1-1H14.14c-.83 0-1.64.33-2.25.94L9.5 10.2"/></svg>);
         const PieChartIcon = ({size=18, className=""}) => (<svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M21.21 15.89A10 10 0 1 1 8 2.83"/><path d="M22 12A10 10 0 0 0 12 2v10z"/></svg>);
         const TrendingUpIcon = ({size=18, className=""}) => (<svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><polyline points="23 6 13.5 15.5 8.5 10.5 1 18"/><polyline points="17 6 23 6 23 12"/></svg>);
+        // 新增：刷新/重置图标
+        const RefreshCcwIcon = ({size=16, className=""}) => (<svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/></svg>);
 
         // 输入框组件 - 紧凑版
         const InputField = ({ label, value, onChange, required, suffix = "", prefix = "¥", theme = "indigo" }) => {
@@ -95,8 +97,8 @@
                             <span className="text-slate-400 text-[10px] font-bold mr-1 group-focus-within:text-slate-500 transition-colors select-none shrink-0">
                                 {prefix}
                             </span>
-                            <input
-                                type="number" min="0" value={value}
+                            <input 
+                                type="number" min="0" value={value} 
                                 onChange={(e) => {
                                     const val = e.target.value;
                                     if (val === '' || parseFloat(val) >= 0) onChange(val);
@@ -105,9 +107,9 @@
                                 onWheel={(e) => e.target.blur()}
                                 placeholder={required ? "0" : "0"}
                                 className={`
-                                    w-full bg-transparent text-right font-bold tracking-tight
+                                    w-full bg-transparent text-right font-bold tracking-tight 
                                     text-slate-800 dark:text-white placeholder:text-slate-300
-                                    focus:outline-none text-base lg:text-sm font-sans
+                                    focus:outline-none text-base lg:text-sm font-sans 
                                     min-w-0
                                 `}
                             />
@@ -157,24 +159,58 @@
             );
         };
 
-        const ModuleHeader = ({ icon: Icon, title, bgColor, iconColor }) => (
-            <div className="flex items-center gap-2 mb-2 pl-1">
-                <div className={`w-7 h-7 rounded-lg flex items-center justify-center shadow-sm transition-transform hover:scale-105 ${bgColor} dark:bg-opacity-20`}>
-                    <Icon size={16} className={iconColor} strokeWidth={2.5} />
+        // 模块标题栏 - 新增 onReset 属性和刷新按钮
+        const ModuleHeader = ({ icon: Icon, title, bgColor, iconColor, onReset }) => (
+            <div className="flex items-center justify-between mb-2 pl-1 pr-1">
+                <div className="flex items-center gap-2">
+                    <div className={`w-7 h-7 rounded-lg flex items-center justify-center shadow-sm transition-transform hover:scale-105 ${bgColor} dark:bg-opacity-20`}>
+                        <Icon size={16} className={iconColor} strokeWidth={2.5} />
+                    </div>
+                    <h3 className="text-sm font-bold text-slate-800 dark:text-white tracking-wide">{title}</h3>
                 </div>
-                <h3 className="text-sm font-bold text-slate-800 dark:text-white tracking-wide">{title}</h3>
+                {onReset && (
+                    <button 
+                        onClick={onReset}
+                        className="w-7 h-7 flex items-center justify-center rounded-full text-slate-400 hover:text-slate-600 hover:bg-slate-100 dark:hover:text-slate-200 dark:hover:bg-white/10 transition-all active:scale-95"
+                        title="重置此模块"
+                    >
+                        <RefreshCcwIcon size={14} />
+                    </button>
+                )}
             </div>
         );
 
         const InvestmentCalculator = () => {
             const [newStore, setNewStore] = useState({
-                rent: '', paymentTerms: '', deposit: '', transferFee: '', franchiseFee: '',
-                renovationAds: '', equipment: '', materials: '',
+                rent: '', paymentTerms: '', deposit: '', transferFee: '', franchiseFee: '', 
+                renovationAds: '', equipment: '', materials: '', 
                 monthlyLabor: '', utilities: '', grossMargin: ''
             });
             const [existingStore, setExistingStore] = useState({
                 dailyRevenue: '', dailyRent: '', dailyLabor: '', dailyUtilities: '', grossMargin: ''
             });
+
+            // 重置功能
+            const resetNewStoreCosts = () => {
+                setNewStore(prev => ({
+                    ...prev,
+                    rent: '', paymentTerms: '', deposit: '', transferFee: '', franchiseFee: '', 
+                    renovationAds: '', equipment: '', materials: ''
+                }));
+            };
+
+            const resetNewStoreOperations = () => {
+                setNewStore(prev => ({
+                    ...prev,
+                    monthlyLabor: '', utilities: '', grossMargin: ''
+                }));
+            };
+
+            const resetExistingStore = () => {
+                setExistingStore({
+                    dailyRevenue: '', dailyRent: '', dailyLabor: '', dailyUtilities: '', grossMargin: ''
+                });
+            };
 
             const parse = (val) => parseFloat(val) || 0;
 
@@ -228,7 +264,15 @@
                             {/* 模块1：建店成本 */}
                             <div className="bg-white dark:bg-[#111623] rounded-2xl shadow-sm border border-white dark:border-white/5 flex flex-col h-auto overflow-hidden">
                                 <div className="h-1 w-full bg-orange-200"></div>
-                                <div className="p-4 pb-1"><ModuleHeader icon={HammerIcon} title="新开店：建店成本" bgColor="bg-orange-50" iconColor="text-orange-500" /></div>
+                                <div className="p-4 pb-1">
+                                    <ModuleHeader 
+                                        icon={HammerIcon} 
+                                        title="新开店：建店成本" 
+                                        bgColor="bg-orange-50" 
+                                        iconColor="text-orange-500" 
+                                        onReset={resetNewStoreCosts}
+                                    />
+                                </div>
                                 <div className="px-4 pb-4 flex-1 space-y-0.5">
                                     <InputField theme="orange" label="每月房租 (元)" value={newStore.rent} onChange={v => setNewStore({...newStore, rent: v})} required />
                                     <InputField theme="orange" label="几个月一付" value={newStore.paymentTerms} onChange={v => setNewStore({...newStore, paymentTerms: v})} suffix="" required prefix="" />
@@ -244,16 +288,24 @@
                                 </div>
                             </div>
 
-                            {/* 模块2：盈亏平衡 (已修改) */}
+                            {/* 模块2：盈亏平衡 */}
                             <div className="bg-white dark:bg-[#111623] rounded-2xl shadow-sm border border-white dark:border-white/5 flex flex-col h-auto overflow-hidden">
                                 <div className="h-1 w-full bg-indigo-200"></div>
-                                <div className="p-4 pb-1"><ModuleHeader icon={PieChartIcon} title="新开店：盈亏平衡" bgColor="bg-indigo-50" iconColor="text-indigo-500" /></div>
+                                <div className="p-4 pb-1">
+                                    <ModuleHeader 
+                                        icon={PieChartIcon} 
+                                        title="新开店：盈亏平衡" 
+                                        bgColor="bg-indigo-50" 
+                                        iconColor="text-indigo-500" 
+                                        onReset={resetNewStoreOperations}
+                                    />
+                                </div>
                                 <div className="px-4 pb-4 flex-1 space-y-0.5">
                                     <InputField theme="indigo" label="预估人工费 (每月)" value={newStore.monthlyLabor} onChange={v => setNewStore({...newStore, monthlyLabor: v})} required />
                                     <InputField theme="indigo" label="预估水/电/杂费 (每月)" value={newStore.utilities} onChange={v => setNewStore({...newStore, utilities: v})} required />
                                     <InputField theme="indigo" label="预估毛利率" value={newStore.grossMargin} onChange={v => setNewStore({...newStore, grossMargin: v})} required prefix="%" suffix="" />
                                     
-                                    {/* 新增的自动计算区域 */}
+                                    {/* 自动计算区域 */}
                                     <div className="pt-2 mt-2 border-t border-dashed border-slate-200 dark:border-white/10 space-y-0.5">
                                         <div className="px-1 mb-1 text-[10px] text-slate-300 dark:text-slate-600 font-bold tracking-wider">自动折算的每日成本</div>
                                         <ReadOnlyRow label="每日房租" value={nsDailyRent} />
@@ -270,7 +322,15 @@
                             {/* 模块3：经营分析 */}
                             <div className="bg-white dark:bg-[#111623] rounded-2xl shadow-sm border border-white dark:border-white/5 flex flex-col h-auto overflow-hidden">
                                 <div className="h-1 w-full bg-emerald-200"></div>
-                                <div className="p-4 pb-1"><ModuleHeader icon={TrendingUpIcon} title="已开店：经营分析" bgColor="bg-emerald-50" iconColor="text-emerald-500" /></div>
+                                <div className="p-4 pb-1">
+                                    <ModuleHeader 
+                                        icon={TrendingUpIcon} 
+                                        title="已开店：经营分析" 
+                                        bgColor="bg-emerald-50" 
+                                        iconColor="text-emerald-500" 
+                                        onReset={resetExistingStore}
+                                    />
+                                </div>
                                 <div className="px-4 pb-4 flex-1 space-y-0.5">
                                     <InputField theme="emerald" label="营业额 (每天)" value={existingStore.dailyRevenue} onChange={v => setExistingStore({...existingStore, dailyRevenue: v})} required />
                                     <InputField theme="emerald" label="房租 (每天)" value={existingStore.dailyRent} onChange={v => setExistingStore({...existingStore, dailyRent: v})} required />
