--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                     <InputField theme="orange" label="首批物料" value={newStore.materials} onChange={v => setNewStore({...newStore, materials: v})} />
                                 </div>
                                 <div className="bg-slate-50 dark:bg-[#0F131F] border-t border-slate-100 dark:border-white/5 flex p-0">
-                                    <ResultBox label="建店总成本" value={nsSetupCost} highlightColor="text-orange-600 dark:text-orange-400" subtext="房租×期数 + 各项杂费" isLast={true} />
+                                    <ResultBox label="建店总成本" value={nsSetupCost} highlightColor="text-orange-600 dark:text-orange-400" subtext="月房租×月数 + 各项杂费" isLast={true} />
                                 </div>
                             </div>
 
