--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                 <h1 className="text-lg font-black tracking-tighter text-slate-800 dark:text-white font-sans">餐饮店投资计算器</h1>
                             </div>
                             
-                            <div className="hidden md:flex items-center gap-4 text-[10px] font-bold text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-800 py-1.5 px-4 rounded-full shadow-sm border border-white/60 dark:border-white/10">
+                            <div className="flex items-center gap-2 md:gap-4 text-[10px] font-bold text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-800 py-1.5 px-4 rounded-full shadow-sm border border-white/60 dark:border-white/10 mt-1 md:mt-0">
                                 <span className="flex items-center gap-1.5"><span className="w-1.5 h-1.5 rounded-full bg-red-500"></span> 红点部分为必填项</span>
                                 <span className="w-px h-3 bg-slate-200 dark:bg-slate-700"></span>
                                 <span className="flex items-center gap-1.5"><span className="w-1.5 h-1.5 rounded-full bg-indigo-500"></span> 输入会自动计算结果</span>
